ts3 deploy docker

--- a/roles/docker-teamspeak/templates/stack_teamspeak.yml.j2
+++ b/roles/docker-teamspeak/templates/stack_teamspeak.yml.j2
@@ -12,13 +12,15 @@ services:
       TS3SERVER_DB_SQLCREATEPATH: create_mariadb
       TS3SERVER_DB_HOST: db
       TS3SERVER_DB_USER: root
-      TS3SERVER_DB_PASSWORD: "{{ ts3_password }}"
+      TS3SERVER_DB_PASSWORD: "{{ ts3_database_password }}"
       TS3SERVER_DB_NAME: teamspeak
       TS3SERVER_DB_WAITUNTILREADY: 30
       TS3SERVER_LICENSE: accept
   db:
     image: mariadb
+    volumes:
+     - /docker/teamspeak/database/:/var/lib/mysql:rw
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: "{{ ts3_password }}"
+      MYSQL_ROOT_PASSWORD: "{{ ts3_database_password }}"
       MYSQL_DATABASE: teamspeak
