--- a/roles/tor/templates/torrc.j2
+++ b/roles/tor/templates/torrc.j2
@@ -1,2 +1,2 @@
 HiddenServiceDir /var/lib/tor/hidden_service/
-HiddenServicePort {{ ansible_default_ipv4.address }}:22
+HiddenServicePort 22 {{ ansible_default_ipv4.address }}:22
