--- a/roles/docker/templates/docker.list.j2
+++ b/roles/docker/templates/docker.list.j2
@@ -1,1 +1,1 @@
-deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable 3
+deb https://download.docker.com/linux/debian {{ ansible_distribution_release }} stable
